# starbuzzUrlib

./: .gitignore  README.md  destinos.txt  enderecoEmail.txt  procuraPreco.py  pyproject.toml
