[tool.poetry]
name = "starbuzzurlib"
version = "0.1.0"
description = ""
authors = ["Rafael Rebello Vitorino <rrebellov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
